maquetado de la web en general

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,6 +1,6 @@
 
 
-<div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+<div class="grid grid-cols-2 md:grid-cols-3 gap-4 hidden">
     <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image.jpg" alt="">
     </div>
