--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Welcome from '../components/Welcome.astro';
+// import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import HeroXochi from '../components/HeroXochi.astro';
@@ -12,7 +12,7 @@ import Gallery from '../components/Gallery.astro';
 <Layout>
 	<!-- <Welcome /> -->
 	<Header />
-	<main>
+	<main class="flex justify-center mt-3 pt-3 pb-3">
 		<HeroXochi />
 		<Gallery />
 	</main>
