--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -1,7 +1,7 @@
-<section class="bg-white dark:bg-gray-900">
+<section class="w-full sm:w-3/4 max-w-screen-lg bg-white dark:bg-transparent">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16">
-        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
-            XochiCera <br> 
+        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-slate-500">
+            <!-- <span class="text-slate-700">XochiCera</span><br>  -->
             Bienvenido a nuestra Galería
         </h1>
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-400">
