--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,9 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
+	<body class="min-w-min lg:w-full h-auto">
+		<!-- <div class="fixed top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div> -->
+		<div class="fixed inset-0 -z-10 h-screen w-creen bg-white [background:radial-gradient(125%_125%_at_50%_10%,#fff_40%,#63e_100%)]"></div>
 		<slot />
 	</body>
 </html>
@@ -17,6 +19,7 @@
 	body {
 		margin: 0;
 		width: 100%;
-		height: 100%;
+		height: 1500px;
+		/* height: 100%; */
 	}
 </style>
