--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>XochiCera</title>
 	</head>
 	<body class="min-w-min lg:w-full h-auto">
 		<!-- <div class="fixed top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div> -->
@@ -19,7 +19,7 @@
 	body {
 		margin: 0;
 		width: 100%;
-		height: 1500px;
-		/* height: 100%; */
+		/* height: 1500px; */
+		height: 100%;
 	}
 </style>
