--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,13 @@
 ---
-// import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import HeroXochi from '../components/HeroXochi.astro';
 import Gallery from '../components/Gallery.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<!-- <Welcome /> -->
 	<Header />
-	<main class="flex justify-center mt-3 pt-3 pb-3">
+	<main class="flex flex-col items-center mt-3 pt-3 pb-3">
 		<HeroXochi />
 		<Gallery />
 	</main>
