modificaciones en componentes hero y gallery

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header class="fixed top-0 z-10 w-full h-14 flex justify-center">
-    <div class="w-full  sm:w-3/4 max-w-screen-lg flex justify-end">
+    <!-- <div class="w-full  sm:w-3/4 max-w-screen-lg flex justify-end">
         <button class="m-2">
             <svg class="hidden" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 32 32">
                 <path fill="#666666" d="M15 2h2v5h-2zm6.688 6.9l3.506-3.506l1.414 1.414l-3.506 3.506zM25 15h5v2h-5zm-3.312 8.1l1.414-1.413l3.506 3.506l-1.414 1.414zM15 25h2v5h-2zm-9.606.192L8.9 21.686l1.414 1.414l-3.505 3.506zM2 15h5v2H2zm3.395-8.192l1.414-1.414L10.315 8.9L8.9 10.314zM16 12a4 4 0 1 1-4 4a4.005 4.005 0 0 1 4-4m0-2a6 6 0 1 0 6 6a6 6 0 0 0-6-6"/>
@@ -8,5 +8,5 @@
                 <path fill="#666666" d="M12 21q-3.75 0-6.375-2.625T3 12t2.625-6.375T12 3q.35 0 .688.025t.662.075q-1.025.725-1.638 1.888T11.1 7.5q0 2.25 1.575 3.825T16.5 12.9q1.375 0 2.525-.613T20.9 10.65q.05.325.075.662T21 12q0 3.75-2.625 6.375T12 21m0-2q2.2 0 3.95-1.213t2.55-3.162q-.5.125-1 .2t-1 .075q-3.075 0-5.238-2.163T9.1 7.5q0-.5.075-1t.2-1q-1.95.8-3.163 2.55T5 12q0 2.9 2.05 4.95T12 19m-.25-6.75"/>
             </svg>
         </button>
-    </div>
+    </div> -->
 </header>
