--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -5,8 +5,7 @@
             Bienvenido a nuestra Galería
         </h1>
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-400">
-            Explora nuestra colección de artesanías en cera impresionantes. 
-            Cada pieza cuenta una historia única, creada con pasión y dedicación por nuestros artesanos.
+            "Donde el arte y la tradición florecen en cada gota de cera."
         </p>
         <!-- <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
         </div> -->
