--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+<div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-2 md:grid-cols-3 gap-4 mb-10">
     <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image.jpg" alt="">
     </div>
