correcion de rutas en img

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,12 +1,12 @@
 <div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-2 md:grid-cols-3 gap-4 mb-10">
     <div class="bg-gray-200 rounded-lg">
-        <img class="h-auto max-w-full" src="src/assets/velas/penachovela.png" alt="vela">
+        <img class="h-auto max-w-full" src="/velas/penachovela.png" alt="vela">
     </div>
     <div class="bg-gray-200 rounded-lg">
         <img class="h-auto max-w-full" src="/velas/penachovela.png" alt="vela">
     </div>
     <div class="bg-gray-200 rounded-lg">
-        <img class="h-auto max-w-full" src="src/assets/velas/penachovela.png" alt="vela">
+        <img class="h-auto max-w-full" src="/velas/penachovela.png" alt="vela">
     </div>
     <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
