listado de imagenes en las tarjetas

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,38 +1,38 @@
 <div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-2 md:grid-cols-3 gap-4 mb-10">
-    <div class="bg-gray-200 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl" src="/velas/penachovela.png" alt="vela">
-    </div>
-    <div class="bg-gray-200 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.png" alt="vela">
-    </div>
-    <div class="bg-gray-200 rounded-lg">
+    <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.webp" alt="vela">
     </div>
-    <div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.webp" alt="vela">
+    </div>
+    <!-- <div class="bg-gray-200 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/velas/penacho.webp" alt="cirio-grande">
+    </div> -->
+    <!-- <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
-    </div>
-    <div>
+    </div> -->
+    <!-- <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
-    </div>
-    <div>
+    </div> -->
+    <!-- <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg" alt="">
-    </div>
-    <div>
+    </div> -->
+    <!-- <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-6.jpg" alt="">
-    </div>
-    <div>
+    </div> -->
+    <!-- <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-7.jpg" alt="">
+    </div> -->
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-mzo1-2023.webp" alt="cirio-grande">
     </div>
-    <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-8.jpg" alt="">
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-agt3-2022.webp" alt="cirio-grande">
     </div>
-    <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-9.jpg" alt="">
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-agt2-2022.webp" alt="cirio-grande">
     </div>
-    <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-10.jpg" alt="">
-    </div>
-    <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-11.jpg" alt="">
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-agt1-2022.webp" alt="cirio-grande">
     </div>
 </div>
