integracion de mas imagenes de artesanias

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -2,9 +2,9 @@
     <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.webp" alt="vela">
     </div>
-    <div class="bg-gray-300 rounded-lg">
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.webp" alt="vela">
-    </div>
+    </div> -->
     <!-- <div class="bg-gray-200 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/velas/penacho.webp" alt="cirio-grande">
     </div> -->
@@ -14,15 +14,18 @@
     <!-- <div>
         <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
     </div> -->
-    <!-- <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg" alt="">
-    </div> -->
-    <!-- <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-6.jpg" alt="">
-    </div> -->
-    <!-- <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-7.jpg" alt="">
-    </div> -->
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-may2-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-may1-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-abr2-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-abr1-2023.webp" alt="cirio-grande">
+    </div>
     <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-mzo1-2023.webp" alt="cirio-grande">
     </div>
