se agregaron 3 img mas

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -8,12 +8,15 @@
     <!-- <div class="bg-gray-200 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/velas/penacho.webp" alt="cirio-grande">
     </div> -->
-    <!-- <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
-    </div> -->
-    <!-- <div>
-        <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
-    </div> -->
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-dic1-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-jul1-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-jun1-2023.webp" alt="cirio-grande">
+    </div>
     <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-may2-2023.webp" alt="cirio-grande">
     </div>
