imagenes de cera octubre 2023

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,15 +1,15 @@
 <div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-2 md:grid-cols-3 gap-4 mb-10">
     <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-dic1-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.webp" alt="vela">
     </div>
-    <!-- <div class="bg-gray-300 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl" src="/velas/vela-penacho.webp" alt="vela">
-    </div> -->
-    <!-- <div class="bg-gray-200 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl" src="/velas/penacho.webp" alt="cirio-grande">
-    </div> -->
     <div class="bg-gray-300 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-dic1-2023.webp" alt="cirio-grande">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-oct2-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-oct1-2023.webp" alt="cirio-grande">
     </div>
     <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-jul1-2023.webp" alt="cirio-grande">
