--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -7,7 +7,8 @@
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48">
             "Donde el arte y la tradición florecen en cada gota de cera."
         </p>
-        <!-- <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-        </div> -->
+        <div class="absolute bottom-8 left-1/2 -translate-x-1/2 animate-bounce">
+            ↓ Desliza para explorar
+        </div>
     </div>
 </section>
