animacion de confetti

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,8 @@
 	<body class="min-w-min lg:w-full h-auto">
 		<div class="fixed inset-0 -z-10 h-screen w-creen bg-white [background:radial-gradient(125%_125%_at_50%_10%,#fff_40%,#63e_100%)]"></div>
 		<slot />
+		<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+		<script src="/src/assets/efecto-confetti.js"></script>
 	</body>
 </html>
 
