actualizacion en jumbotron

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,4 +1,4 @@
-<div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mb-10 px-5 sm:p-0">
+<div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
     <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl" src="/cirios/cirio-agt3-2024.webp" alt="cirio-grande">
     </div>
