imagenes de agosto 2023

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -36,6 +36,12 @@
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-oct1-2023.webp" alt="cirio-grande">
     </div>
     <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt2-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt1-2023.webp" alt="cirio-grande">
+    </div>
+    <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-jul1-2023.webp" alt="cirio-grande">
     </div>
     <div class="bg-gray-300 rounded-lg">
