--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -7,7 +7,7 @@
             Bienvenid@ a nuestra galería
         </h2>
         <p class="animate__animated animate__fadeInUp mt-3 mb-8 text-lg font-normal text-gray-600 lg:text-xl sm:px-16 lg:px-48">
-            "Donde el arte y la tradición florecen en cada gota de cera."
+            "Donde el arte y la tradición florecen en cada gota de cera. Descúbrelo"
         </p>
         <div class="absolute bottom-12 left-1/2 -translate-x-1/2 animate-bounce">
             ↓ Desliza para explorar
