--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -1,11 +1,12 @@
 <section class="w-full h-screen sm:w-3/4 max-w-screen-lg flex items-center">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16">
-        <h1 class="animate__animated animate__fadeInDown mb-3 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl text-slate-800">
-            XochiCera
+        <h1 class="animate__animated animate__fadeInDown mb-3 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl">
+            <span class="text-transparent bg-clip-text bg-gradient-to-r to-violet-600 from-violet-400">XochiCera</span>  
+            <!-- <span class="text-transparent bg-clip-text bg-gradient-to-r to-violet-600 from-indigo-400">Xochicera</span>  -->
         </h1>
         <h2 class="animate__animated animate__fadeInLeft text-3xl font-bold tracking-tight leading-none md:text-4xl lg:text-5xl text-slate-700">
             Bienvenid@ a nuestra galería
-        </h2>
+        </h2>   
         <p class="animate__animated animate__fadeInUp mt-3 mb-8 text-lg font-normal text-gray-600 lg:text-xl sm:px-16 lg:px-48">
             "Donde el arte y la tradición florecen en cada gota de cera. Descúbrelo"
         </p>
