--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,7 +1,13 @@
 <div class="w-full sm:w-3/4 max-w-screen-lg grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
     <div class="bg-gray-300 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt4-2024.webp" alt="cirio-grande">
+        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="https://res.cloudinary.com/dhwbvncoq/image/upload/v1736197508/Artisan/cirio-dic1-2024_uhmwq5.webp" alt="cirio-grande">
     </div>
+    <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="https://res.cloudinary.com/dhwbvncoq/image/upload/v1736196962/Artisan/cirio-agt4-2024_vyzadz.webp" alt="cirio-grande">
+    </div>
+    <!-- <div class="bg-gray-300 rounded-lg">
+        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt4-2024.webp" alt="cirio-grande">
+    </div> -->
     <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt3-2024.webp" alt="cirio-grande">
     </div>
