integracion de informacion en el archivo json y eliminar los div de las tarjetas

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -10,63 +10,63 @@ import artesanias from '../assets/artesanias.json';
         ))
     }
 
-    <div class="bg-gray-300 rounded-lg">
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="https://res.cloudinary.com/dhwbvncoq/image/upload/v1736197508/Artisan/cirio-dic1-2024_uhmwq5.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="https://res.cloudinary.com/dhwbvncoq/image/upload/v1736196962/Artisan/cirio-agt4-2024_vyzadz.webp" alt="cirio-grande">
-    </div>
+    </div> -->
     <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt4-2024.webp" alt="cirio-grande">
     </div> -->
-    <div class="bg-gray-300 rounded-lg">
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt3-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt2-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt1-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-jul1-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-may2-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-may1-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-abr2-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-abr1-2024.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-dic1-2023.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/velas/vela-penacho.webp" alt="vela">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-oct2-2023.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-oct1-2023.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt2-2023.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-agt1-2023.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-jul1-2023.webp" alt="cirio-grande">
-    </div>
-    <div class="bg-gray-300 rounded-lg">
+    </div> -->
+    <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-jun1-2023.webp" alt="cirio-grande">
-    </div>
+    </div> -->
     <!-- <div class="bg-gray-300 rounded-lg">
         <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="/cirios/cirio-may2-2023.webp" alt="cirio-grande">
     </div> -->
