--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,16 +1,44 @@
 ---
 import artesanias from '../assets/artesanias.json';
+import TooltipsReactions from './TooltipsReactions.astro';
+import Tooltips from './tooltips.astro';
 ---
 <div class="w-full sm:w-3/4 max-w-scren-lg grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
 
-    {artesanias.slice().reverse().map((artesania) => (
+    <!-- {artesanias.slice().reverse().map((artesania) => (
         <div class="bg-gray-300 rounded-lg">
             <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src={artesania.image_url} alt={artesania.name} />
+            <div class="h-14 flex justify-end">
+                {/* contendre el boton */}
+                {/* <Tooltips cardId={artesania.id}/>  */}
+                <TooltipsReactions artisanId={artesania.id} /> 
+
+            </div>
         </div>
         ))
-    }
+    } -->
 
-    <!-- <div class="bg-gray-300 rounded-lg">
-        <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src="https://res.cloudinary.com/dhwbvncoq/image/upload/v1736197508/Artisan/cirio-dic1-2024_uhmwq5.webp" alt="cirio-grande">
-    </div> -->
+
+    
+    {artesanias.slice().reverse().map((artesania) => (
+        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <div class="p-1 bg-gray-300 rounded-t-lg">
+                <img class="hover:scale-105" src={artesania.image_url} alt={artesania.name}/>
+            </div>
+            <div class="p-5">
+                <div>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{artesania.name}</h5>
+                </div>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{artesania.type}</p>
+                <div class="w-full inline-flex justify-end px-3 py-2 text-sm font-medium text-center">
+                    {/* <!-- Read more -->
+                    <!-- <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                    </svg> --> */}
+                    <TooltipsReactions artisanId={artesania.id} />
+                </div>
+            </div>
+        </div>
+    ))}
+    
 </div>
