--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -11,7 +11,7 @@
             "Donde el arte y la tradición florecen en cada gota de cera. Descúbrelo"
         </p>
         <div class="absolute bottom-12 left-1/2 -translate-x-1/2 animate-bounce">
-            ↓ Desliza para explorar
+            ↓ Explora las artesanías
         </div>  
     </div>
 </section>
