--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import HeroXochi from '../components/HeroXochi.astro';
 import Gallery from '../components/Gallery.astro';
-
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
@@ -12,4 +12,5 @@ import Gallery from '../components/Gallery.astro';
 		<HeroXochi />
 		<Gallery />
 	</main>
+	<Footer />
 </Layout>
