--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -26,9 +26,9 @@ import Tooltips from './tooltips.astro';
                 <img class="block w-full h-full object-contain drop-shadow-xl" src={artesania.image_url} alt={artesania.name}/>
             </div>
             <div class="p-5">
-                {/* <div>
+                <div>
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{artesania.name}</h5>
-                </div> */}
+                </div>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{artesania.type}</p>
                 <div class="w-full inline-flex justify-end px-3 py-2 text-sm font-medium text-center">
                     {/* <!-- Read more -->
