--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -3,7 +3,7 @@ import artesanias from '../assets/artesanias.json';
 import TooltipsReactions from './TooltipsReactions.astro';
 import Tooltips from './tooltips.astro';
 ---
-<div class="w-full sm:w-3/4 max-w-scren-lg grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
+<div class="w-11/12 sm:w-3/4 max-w-scren-lg grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
 
     <!-- {artesanias.slice().reverse().map((artesania) => (
         <div class="bg-gray-300 rounded-lg">
@@ -21,11 +21,11 @@ import Tooltips from './tooltips.astro';
 
     
     {artesanias.slice().reverse().map((artesania) => (
-        <div class="bg-white border border-gray-200 rounded-lg shadow">
-            <div class="w-full flex justify-center items-center bg-gray-300 rounded-t-lg h-[500px] overflow-hidden p-3">
+        <div class="bg-transparent border border-gray-100 rounded-lg shadow overflow-hidden">
+            <div class="relative w-full flex justify-center items-center bg-slate-700 bg-opacity-30 backdrop-blur-md rounded-t-lg h-[500px] overflow-hidden p-3">
                 <img class="block w-full h-full object-contain drop-shadow-xl" src={artesania.image_url} alt={artesania.name}/>
             </div>
-            <div class="p-5">
+            <div class="h-full bg-white p-5">
                 <div>
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{artesania.name}</h5>
                 </div>
@@ -35,10 +35,10 @@ import Tooltips from './tooltips.astro';
                     <!-- <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg> --> */}
-                    {/* <TooltipsReactions artisanId={artesania.id} />  */}
+                    {/* <TooltipsReactions artisanId={artesania.id} /> */}
                 </div>
             </div>
         </div>
     ))}
-    
+      
 </div>
