--- a/src/components/TooltipsReactions.astro
+++ b/src/components/TooltipsReactions.astro
@@ -1,6 +1,16 @@
 ---
 const { artisanId } = Astro.props;
+
+// Función para manejar el clic en las reacciones
+function manejarReaccion(tipoReaccion:string) {
+  console.log(`Se hizo clic en la reacción: ${tipoReaccion}`);
+}
 ---
+<!-- <script>
+    function tipeReaction(tipoReaccion:string) {
+      console.log(`Se hizo clic en la reacción: ${tipoReaccion}`);
+    }
+  </script> -->
 
 <div data-dial-init class="flex end-6 bottom-6 group">
     <div id={`speed-dial-menu-horizontal-${artisanId}`} class="flex items-center hidden me-4 space-x-2 rtl:space-x-reverse">
@@ -30,7 +40,7 @@ const { artisanId } = Astro.props;
             Apoyar
             <div class="tooltip-arrow" data-popper-arrow></div>
         </div>
-        <button type="button" data-tooltip-target={`tooltip-download-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+        <button onclick="manejarReaccion('creativo')" type="button" data-tooltip-target={`tooltip-download-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 64 64">
                 <path fill="#ffce31" d="M62 23H39.1L32 2l-7.1 21H2l18.5 13l-7.1 21L32 44l18.5 13l-7.1-21z"/>
                 <path fill="#ffdf85" d="m46.2 20.3l4-11.4l-10.5 7.2l1.5 4.2zM27.9 50L32 62l4.1-12l-4.1-2.8zm22.8-15.7l-3.8 2.6l1.6 4.8h12.9zM24.3 16.1L13.8 8.9l4 11.4h5zm-11 18.2L2.6 41.7h12.9l1.6-4.8z"/>
@@ -50,5 +60,9 @@ const { artisanId } = Astro.props;
     </button>
 </div>
 
-
+<script>
+    function manejarReaccion(reaccion: string): void {
+    console.log(`Reacción seleccionada: ${reaccion}`);
+  }
+  </script>
 
