--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,7 +1,10 @@
 ---
 import artesanias from '../assets/artesanias.json';
 import TooltipsReactions from './TooltipsReactions.astro';
-import Tooltips from './tooltips.astro';
+// import Tooltips from './tooltips.astro';
+import { TooltipsReactionsComponent } from './angularcomponents/TooltipsReactions.component';
+
+// const helpText:string = "Helping binding";
 ---
 <div class="w-11/12 sm:w-3/4 max-w-scren-lg grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
 
@@ -36,6 +39,7 @@ import Tooltips from './tooltips.astro';
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg> --> */}
                     {/* <TooltipsReactions artisanId={artesania.id} /> */}
+                    <TooltipsReactionsComponent artisanId={artesania.id}/>
                 </div>
             </div>
         </div>
