modificaciones en la seccion de reacciones

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const helpText = "Helping binding index"; // Definir la propiedad
 		<HeroXochi />
 		<Gallery />
 	</main>
-	<!-- <HelloComponent /> -->
+	<!-- <HelloComponent /> 
 	 <!-- Usa el componente Angular dentro de Astro -->
 	 <!-- <HelloComponent client:visible helpText={helpText}/> -->
 	<!-- <HelloComponent helpText={helpText} /> -->
