--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -39,10 +39,11 @@ import { TooltipsReactionsComponent } from './angularcomponents/TooltipsReaction
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg> --> */}
                     {/* <TooltipsReactions artisanId={artesania.id} /> */}
-                    <TooltipsReactionsComponent artisanId={artesania.id}/>
+                    {/* <TooltipsReactionsComponent artisanId={artesania.id}/> */}
                 </div>
             </div>
         </div>
     ))}
       
 </div>
+
