--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ const helpText = "Helping binding index"; // Definir la propiedad
 		<HeroXochi />
 		<Gallery />
 	</main>
-	<!-- <HelloComponent /> 
+	<!-- <HelloComponent />  -->
 	 <!-- Usa el componente Angular dentro de Astro -->
 	 <!-- <HelloComponent client:visible helpText={helpText}/> -->
-	<!-- <HelloComponent helpText={helpText} /> -->
+	<!-- <HelloComponent helpText={helpText} />  -->
 	<Footer />
 </Layout>
