--- a/src/components/TooltipsReactions.astro
+++ b/src/components/TooltipsReactions.astro
@@ -1,4 +1,8 @@
 ---
+import { ReactionLoveComponent } from "./reactions-components/loveoreaction.component";
+import { ReactionSupportComponent } from "./reactions-components/supportreaction.component";
+import { ReactionCreativeComponent } from "./reactions-components/creativereaction.component";
+import { TooltipLoveComponent } from "./reactions-components/lovetooltip.component";
 const { artisanId } = Astro.props;
 
 // Función para manejar el clic en las reacciones
@@ -14,17 +18,19 @@ function manejarReaccion(tipoReaccion:string) {
 
 <div data-dial-init class="flex end-6 bottom-6 group">
     <div id={`speed-dial-menu-horizontal-${artisanId}`} class="flex items-center hidden me-4 space-x-2 rtl:space-x-reverse">
-        <button type="button" data-tooltip-target={`tooltip-share-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+        <!-- <button type="button" data-tooltip-target={`tooltip-share-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 512 512">
                 <path fill="#FF473E" d="M476.6 133c-53.7-63.5-148.7-66.5-206.3-9.1l-.2.2c-8 8-20.5 8-28.4 0l-.2-.2c-54.6-54.8-143.3-55-198.1-.4C-3.2 169.8-10.9 244.6 25 299.7c11.2 17.3 25.3 30.6 40.9 40.7l180 145.7c6.4 5.2 15.6 5.2 22.1 0l178.8-145.9c15-10 28.6-23 39.5-39.5c34.1-51.3 30.1-120.7-9.7-167.7"/><path fill="#FF6E83" d="M58.7 242.6c-.6 0-1.3 0-1.9-.1c-12.9-1.1-22.5-12.4-21.5-25.3c3.8-45.9 36.5-83.5 81.5-93.5c12.6-2.8 25.2 5.1 28 17.8c2.8 12.6-5.1 25.2-17.8 28c-24.8 5.5-42.9 26.3-45 51.6c-1 12.2-11.2 21.5-23.3 21.5"/>
             </svg>
             <span class="sr-only">Me encanta</span>
-        </button>
-        <div id={`tooltip-share-${artisanId}`} role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+        </button> -->
+        <!-- <div id={`tooltip-share-${artisanId}`} role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
             Me encanta
             <div class="tooltip-arrow" data-popper-arrow></div>
-        </div>
-        <button type="button" data-tooltip-target={`tooltip-print-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+        </div>  -->
+        <ReactionLoveComponent artisanId={artisanId} />
+        <!-- <TooltipLoveComponent client:visible /> -->
+        <!-- <button type="button" data-tooltip-target={`tooltip-print-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 32 32">
                 <g fill="none">
                     <path fill="#FFDEA7" d="M19.629 30h-7.913c-.78 0-1.412-.631-1.412-1.412V15.47c0-.78.632-1.412 1.412-1.412h7.913c.78 0 1.412.632 1.412 1.412v13.118c0 .78-.632 1.412-1.412 1.412"/>
@@ -39,8 +45,9 @@ function manejarReaccion(tipoReaccion:string) {
         <div id={`tooltip-print-${artisanId}`} role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
             Apoyar
             <div class="tooltip-arrow" data-popper-arrow></div>
-        </div>
-        <button onclick="manejarReaccion('creativo')" type="button" data-tooltip-target={`tooltip-download-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+        </div> -->
+        <ReactionSupportComponent artisanId={artisanId}/>
+        <!-- <button onclick="manejarReaccion('creativo')" type="button" data-tooltip-target={`tooltip-download-${artisanId}`} data-tooltip-placement="top" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 64 64">
                 <path fill="#ffce31" d="M62 23H39.1L32 2l-7.1 21H2l18.5 13l-7.1 21L32 44l18.5 13l-7.1-21z"/>
                 <path fill="#ffdf85" d="m46.2 20.3l4-11.4l-10.5 7.2l1.5 4.2zM27.9 50L32 62l4.1-12l-4.1-2.8zm22.8-15.7l-3.8 2.6l1.6 4.8h12.9zM24.3 16.1L13.8 8.9l4 11.4h5zm-11 18.2L2.6 41.7h12.9l1.6-4.8z"/>
@@ -50,7 +57,8 @@ function manejarReaccion(tipoReaccion:string) {
         <div id={`tooltip-download-${artisanId}`} role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
             Creativo
             <div class="tooltip-arrow" data-popper-arrow></div>
-        </div>
+        </div> -->
+        <ReactionCreativeComponent client:visible artisanId={artisanId}/>
     </div>
     <button type="button" data-dial-toggle={`speed-dial-menu-horizontal-${artisanId}`} aria-controls="speed-dial-menu-horizontal" aria-expanded="false" class="flex items-center justify-center text-white bg-blue-700 rounded-full w-14 h-14 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 focus:ring-4 focus:ring-blue-300 focus:outline-none dark:focus:ring-blue-800">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 transition-transform group-hover:-rotate-6" viewBox="0 0 24 24">
