--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -8,25 +8,20 @@ import { ReactionSectionComponent } from './reactions-components/SectionReaction
 // const helpText:string = "Helping binding";
 ---
 <div class="w-11/12 sm:w-3/4 max-w-scren-lg grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-10 px-5 sm:p-0 -mt-14">
-
-    <!-- {artesanias.slice().reverse().map((artesania) => (
-        <div class="bg-gray-300 rounded-lg">
-            <img class="h-auto max-w-full drop-shadow-xl hover:scale-105" src={artesania.image_url} alt={artesania.name} />
-            <div class="h-14 flex justify-end">
-                {/* contendre el boton */}
-                {/* <Tooltips cardId={artesania.id}/>  */}
-                <TooltipsReactions artisanId={artesania.id} /> 
-
-            </div>
-        </div>
-        ))
-    } -->
-
-
-    
+  
     {artesanias.slice().reverse().map((artesania) => (
         <div class="bg-transparent border border-gray-100 rounded-lg shadow overflow-hidden">
             <div class="relative w-full flex justify-center items-center bg-slate-700 bg-opacity-30 backdrop-blur-md rounded-t-lg h-[500px] overflow-hidden p-3">
+                {artesania.status === "new" && (
+                    <div class="flex items-center fixed top-2 left-2 p-1 text-sm text-blue-700 border border-blue-300 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400 dark:border-blue-800" role="alert">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 24 24">
+                        <path fill="none" stroke="#007AAE" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-3-3v6M4 6V5a1 1 0 0 1 1-1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1-1 1h-1m-5 0h-2m-5 0H5a1 1 0 0 1-1-1v-1m0-5v-2m0-5"/>
+                    </svg>
+                    <div class="ms-1">
+                        <span class="font-medium">Nuevo</span>   
+                    </div>
+                </div>
+                ) }
                 <img class="block w-full h-full object-contain drop-shadow-xl" src={artesania.image_url} alt={artesania.name}/>
             </div>
 
@@ -45,9 +40,9 @@ import { ReactionSectionComponent } from './reactions-components/SectionReaction
                 </div>
                 <span class="bg-blue-200 text-blue-700 text-xs font-semibold px-2.5 py-0.5 rounded-md ms-3">0</span>
             </div> */}
-            <ReactionSectionComponent />
+            {/* <ReactionSectionComponent client:visible/>  */}
             
-            <div class="h-full bg-white px-5">
+            <div class="h-full bg-white py-3 px-5">
                 <div>
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{artesania.name}</h5>
                 </div>
