update logo en el footer y favicon

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -40,7 +40,7 @@ import { ReactionSectionComponent } from './reactions-components/SectionReaction
                 </div>
                 <span class="bg-blue-200 text-blue-700 text-xs font-semibold px-2.5 py-0.5 rounded-md ms-3">0</span>
             </div> */}
-            {/*<ReactionSectionComponent client:visible/>*/} 
+            <ReactionSectionComponent client:visible/> 
             
             <div class="h-full bg-white py-3 px-5">
                 {/* <div>
