--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,8 @@
     <div class="w-full sm:w-3/4 max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                <img src="/logo2-xochicera.webp" class="h-12" alt="XochiCera Logo" /> 
+                <!-- <img src="/logo2-xochicera.webp" class="h-12" alt="XochiCera Logo" />  -->
+                <img src="/xochicera-oficial-web.svg" class="h-10" alt="XochiCera Logo" /> 
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">XochiCera</span>
             </a>
             <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-600 sm:mb-0">
