--- a/src/components/HeroXochi.astro
+++ b/src/components/HeroXochi.astro
@@ -1,8 +1,8 @@
 <section class="w-full h-screen sm:w-3/4 max-w-screen-lg flex items-center">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16">
-        <div class="flex justify-center items-end p-1">
+        <div class="flex justify-center items-end p-1 animate__animated animate__fadeInDown">
             <img class="h-32" src="/xochicera-oficial-web.svg" alt="logo-xochicera">
-            <h1 class="animate__animated animate__fadeInDown text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl">
+            <h1 class="text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl">
                 <span class="text-transparent bg-clip-text bg-gradient-to-r to-amber-700 from-yellow-500">
                     ochiCera
                 </span>  
