mejoramiento del SEO, colocando palabras claves en etiquetas ALT

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@
 		<link rel="icon" type="image/svg+xml" href="/xochicera-favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>XochiCera</title>
+		<meta name="description" content="Galería de artesanías de cera hechas a mano en Zoquiapan, Puebla. Conoce el trabajo tradicional de Xochicera, inspirado en la cultura y raíces de la Sierra Norte de Puebla."/>
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
